feat :: order placement simple setup
