# cmd/api/docs/swagger.yaml
@@ -9,6 +9,22 @@ definitions:
     - email
     - password
     type: object
+  request.OrderRequest:
+    properties:
+      symbol:
+        description: Asset symbol (e.g., "BTCUSDT")
+        type: string
+      type:
+        description: 'Order type: "buy" or "sell"'
+        type: string
+      volume:
+        description: Quantity to buy or sell
+        type: number
+    required:
+    - symbol
+    - type
+    - volume
+    type: object
   request.RegisterUserRequest:
     properties:
       confirm_password:
@@ -45,8 +61,8 @@ info:
   contact:
     email: abhinandarun11@gmail.com
     name: For API Support
-  description: 'Backend API built with Golang using Clean Code architecture.
-    \nGithub: [https://github.com/kannan112/mock-trading-platform-api].'
+  description: 'Backend API built with Golang using Clean Code architecture. \nGithub:
+    [https://github.com/kannan112/mock-trading-platform-api].'
   title: Trading Platform Backend API
 paths:
   /api/auth/login:
@@ -135,6 +151,37 @@ paths:
       summary: WebSocket Test Page
       tags:
       - market-data
+  /api/order:
+    post:
+      consumes:
+      - application/json
+      description: Place a buy/sell order with the given details and fetch market
+        data from Binance API.
+      parameters:
+      - description: Order request details
+        in: body
+        name: orderRequest
+        required: true
+        schema:
+          $ref: '#/definitions/request.OrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Order placed successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Invalid order type
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Failed to fetch market data
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Place an order
+      tags:
+      - orders
 securityDefinitions:
   BearerAuth:
     description: 'Add prefix of Bearer before  token Ex: "Bearer token"'
