# pkg/api/handler/request/user.go
@@ -11,3 +11,17 @@ type LoginRequest struct {
 	Email    string `json:"email" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
+
+type OrderRequest struct {
+	Symbol string  `json:"symbol" binding:"required"` // Asset symbol (e.g., "BTCUSDT")
+	Volume float32 `json:"volume" binding:"required"` // Quantity to buy or sell
+	Type   string  `json:"type" binding:"required"`   // Order type: "buy" or "sell"
+}
+
+type MarketData struct {
+	Symbol   string `json:"symbol"`
+	BidPrice string `json:"bidPrice"`
+	BidSize  string `json:"bidSize"`
+	AskPrice string `json:"askPrice"`
+	AskSize  string `json:"askSize"`
+}
